# manipulation

./: Demand_position.srv  a_lift_ros.py  test_newest.ino
dy_custom/: CMakeLists.txt  setup.py
dy_custom/launch/: camegrip_full.launch  split_camegrip.launch
dy_custom/src/: camegrip.cpp  camera.cpp  dobot_api.py  dy_custom in Com.txt  easydy.txt  gripper.cpp  read_write_node.cpp  send_data.py  state.cpp
dy_custom/src/dy_custom/: __init__.py  easydy.py
dy_custom/srv/: GetLoad.srv  SetDegree.srv  SetGripper.srv
dy_custom/test/: jointstatepub.py  testfunction.py
pick/: CMakeLists.txt
pick/src/: pick.py
pickplace_include/: CMakeLists.txt  setup.py
pickplace_include/launch/: pickplace.launch
pickplace_include/src/: client.py  client2.py  deleteholdingobject.py  usefortest.py  walkiegohome.py  walkiegosafe.py
pickplace_include/src/pickplace_include/: __init__.py  joint_command.py
place/: CMakeLists.txt
place/src/: place.py
simple_environment_exporter/: CMakeLists.txt  setup.py  t.py
simple_environment_exporter/config/: sex_save.rviz
simple_environment_exporter/ed/: test_ed.yaml
simple_environment_exporter/launch/: maker.launch
simple_environment_exporter/mesh/: Cupboard.stl  Table.stl
simple_environment_exporter/msg/: ObjectData.msg
simple_environment_exporter/save/: .yaml  kk.yaml  ks.yaml  save1.yaml  save2.yaml
simple_environment_exporter/src/: SEX_maker.py  SEX_navigation_maker.py
simple_environment_exporter/src/simple_environment_exporter/: SEX_Manipulation.py  Simple_Environment_eXporter.py  __init__.py  _import.py  object_exporter.py
tf_manager/: CMakeLists.txt  package.xml  setup.py
tf_manager/src/tf_manager/: __init__.py  tf_main.py
